#103 [mockups] fix align h1 + p page view

--- a/client/style/components/01-atoms/_logotype.scss
+++ b/client/style/components/01-atoms/_logotype.scss
@@ -1,6 +1,12 @@
 //
 // TOFLIT18 ATOM LOGOTYPE
 // --------------------------------------------------
+.navbar-brand {
+    @media (min-width: $screen-xs-max) {
+        position: absolute;
+        left: 15px;
+    }
+}
 
 .icon {
     &-logotype {
