--- a/client/style/components/02-moleculs/_text-heading.scss
+++ b/client/style/components/02-moleculs/_text-heading.scss
@@ -7,7 +7,7 @@
     @include align-items(end);
 
     h1 {
-        margin: 0 3em 0 0;
+        margin: 0;
         font-size: 2.2em;
         color: $olive-haze;
 
