--- a/client/style/components/03-organisms/_navbar-header.scss
+++ b/client/style/components/03-organisms/_navbar-header.scss
@@ -4,16 +4,23 @@
 header {
     .navbar {
         margin-bottom: 0;
+
+        .container-fluid {
+            //
+            // Responsive
+            // --------------------------------------------------
+
+            @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+                padding-left: 33.33333%;
+            }
+
+            @media (min-width: $screen-md-min) {
+                padding-left: 25%;
+            }
+        }
     }
 
     .navbar-nav {
-        //
-        // Responsive
-        // --------------------------------------------------
-        @media (min-width: $screen-xs-max) {
-            margin-left: 9%;
-        }
-
         > li {
             font-size: 1.2em;
         }
